--- a/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CABasicAnimationViewController.xib
+++ b/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CABasicAnimationViewController.xib
@@ -23,25 +23,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IuM-Xp-VM8">
-                    <rect key="frame" x="0.0" y="20" width="375" height="419"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="372"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VtO-2r-l2A">
-                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                            <rect key="frame" x="87.5" y="86" width="200" height="200"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NKA-bX-xWt">
-                                    <rect key="frame" x="5" y="5" width="95" height="95"/>
+                                    <rect key="frame" x="10" y="10" width="90" height="90"/>
                                     <color key="backgroundColor" red="1" green="0.76818942410000002" blue="0.327526975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c7v-R8-f5C">
-                                    <rect key="frame" x="100" y="5" width="95" height="95"/>
+                                    <rect key="frame" x="100" y="10" width="90" height="90"/>
                                     <color key="backgroundColor" red="0.32653338970000001" green="0.50444246280000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U7I-SD-jff">
-                                    <rect key="frame" x="5" y="100" width="95" height="95"/>
+                                    <rect key="frame" x="10" y="100" width="90" height="90"/>
                                     <color key="backgroundColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KQf-a0-7eK">
-                                    <rect key="frame" x="100" y="100" width="95" height="95"/>
+                                    <rect key="frame" x="100" y="100" width="90" height="90"/>
                                     <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </view>
                             </subviews>
@@ -50,36 +50,33 @@
                                 <constraint firstAttribute="centerX" secondItem="U7I-SD-jff" secondAttribute="trailing" id="4P3-hS-T0G"/>
                                 <constraint firstAttribute="centerY" secondItem="NKA-bX-xWt" secondAttribute="bottom" id="5lm-o7-Z6O"/>
                                 <constraint firstAttribute="width" constant="200" id="63Q-6B-oo2"/>
-                                <constraint firstAttribute="trailing" secondItem="KQf-a0-7eK" secondAttribute="trailing" constant="5" id="DV8-ck-Y7m"/>
+                                <constraint firstAttribute="trailing" secondItem="KQf-a0-7eK" secondAttribute="trailing" constant="10" id="DV8-ck-Y7m"/>
                                 <constraint firstItem="KQf-a0-7eK" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="centerX" id="Dld-hk-Geh"/>
                                 <constraint firstAttribute="centerX" secondItem="NKA-bX-xWt" secondAttribute="trailing" id="Gs8-tH-qY0"/>
-                                <constraint firstItem="NKA-bX-xWt" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="top" constant="5" id="Jq5-DN-kkg"/>
+                                <constraint firstItem="NKA-bX-xWt" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="top" constant="10" id="Jq5-DN-kkg"/>
                                 <constraint firstItem="U7I-SD-jff" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="centerY" id="RkZ-ec-2tv"/>
                                 <constraint firstAttribute="height" constant="200" id="SI5-yQ-jQv"/>
                                 <constraint firstItem="KQf-a0-7eK" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="centerY" id="UkR-pP-Hqq"/>
                                 <constraint firstAttribute="centerY" secondItem="c7v-R8-f5C" secondAttribute="bottom" id="W8V-ah-Yru"/>
-                                <constraint firstAttribute="bottom" secondItem="U7I-SD-jff" secondAttribute="bottom" constant="5" id="ZaQ-IS-cug"/>
-                                <constraint firstItem="c7v-R8-f5C" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="top" constant="5" id="bbt-FZ-Qdi"/>
+                                <constraint firstAttribute="bottom" secondItem="U7I-SD-jff" secondAttribute="bottom" constant="10" id="ZaQ-IS-cug"/>
+                                <constraint firstItem="c7v-R8-f5C" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="top" constant="10" id="bbt-FZ-Qdi"/>
                                 <constraint firstItem="c7v-R8-f5C" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="centerX" id="blN-pk-HUt"/>
-                                <constraint firstAttribute="trailing" secondItem="c7v-R8-f5C" secondAttribute="trailing" constant="5" id="eze-ZZ-9bo"/>
-                                <constraint firstItem="NKA-bX-xWt" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="leading" constant="5" id="lx3-lC-qTD"/>
-                                <constraint firstItem="U7I-SD-jff" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="leading" constant="5" id="sRN-rs-Hol"/>
-                                <constraint firstAttribute="bottom" secondItem="KQf-a0-7eK" secondAttribute="bottom" constant="5" id="tJo-2o-r26"/>
+                                <constraint firstAttribute="trailing" secondItem="c7v-R8-f5C" secondAttribute="trailing" constant="10" id="eze-ZZ-9bo"/>
+                                <constraint firstItem="NKA-bX-xWt" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="leading" constant="10" id="lx3-lC-qTD"/>
+                                <constraint firstItem="U7I-SD-jff" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="leading" constant="10" id="sRN-rs-Hol"/>
+                                <constraint firstAttribute="bottom" secondItem="KQf-a0-7eK" secondAttribute="bottom" constant="10" id="tJo-2o-r26"/>
                             </constraints>
                         </view>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="VtO-2r-l2A" firstAttribute="top" secondItem="IuM-Xp-VM8" secondAttribute="top" id="ATd-WV-0Q9"/>
-                        <constraint firstItem="VtO-2r-l2A" firstAttribute="leading" secondItem="IuM-Xp-VM8" secondAttribute="leading" id="chf-G2-rDa"/>
+                        <constraint firstItem="VtO-2r-l2A" firstAttribute="centerX" secondItem="IuM-Xp-VM8" secondAttribute="centerX" id="Rag-UN-hdo"/>
+                        <constraint firstItem="VtO-2r-l2A" firstAttribute="centerY" secondItem="IuM-Xp-VM8" secondAttribute="centerY" id="jz9-Vg-1Fh"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TV7-P5-8Ax">
-                    <rect key="frame" x="0.0" y="447" width="375" height="220"/>
+                    <rect key="frame" x="0.0" y="400" width="375" height="267"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="220" id="GWT-kU-m4t"/>
-                    </constraints>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -90,6 +87,7 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="IuM-Xp-VM8" secondAttribute="trailing" id="UGw-zP-opg"/>
                 <constraint firstItem="IuM-Xp-VM8" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ZB4-dF-Hti"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="TV7-P5-8Ax" secondAttribute="bottom" id="iNw-5w-OfR"/>
+                <constraint firstItem="TV7-P5-8Ax" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.4" id="qML-bc-XNb"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="TV7-P5-8Ax" secondAttribute="trailing" id="qn6-Uy-ekK"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
