--- a/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CABasicAnimationViewController.xib
+++ b/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CABasicAnimationViewController.xib
@@ -12,7 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CABasicAnimationViewController">
             <connections>
-                <outlet property="exampleView" destination="VtO-2r-l2A" id="ZfP-l5-11i"/>
+                <outlet property="contentView" destination="IuM-Xp-VM8" id="ZrN-EU-37e"/>
+                <outlet property="exampleView" destination="VtO-2r-l2A" id="JdT-0l-AiN"/>
                 <outlet property="listView" destination="TV7-P5-8Ax" id="Ic7-h9-XUt"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -48,16 +49,16 @@
                             <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="centerX" secondItem="U7I-SD-jff" secondAttribute="trailing" id="4P3-hS-T0G"/>
+                                <constraint firstAttribute="height" constant="200" id="5Vp-XS-XSU"/>
                                 <constraint firstAttribute="centerY" secondItem="NKA-bX-xWt" secondAttribute="bottom" id="5lm-o7-Z6O"/>
-                                <constraint firstAttribute="width" constant="200" id="63Q-6B-oo2"/>
                                 <constraint firstAttribute="trailing" secondItem="KQf-a0-7eK" secondAttribute="trailing" constant="10" id="DV8-ck-Y7m"/>
                                 <constraint firstItem="KQf-a0-7eK" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="centerX" id="Dld-hk-Geh"/>
                                 <constraint firstAttribute="centerX" secondItem="NKA-bX-xWt" secondAttribute="trailing" id="Gs8-tH-qY0"/>
                                 <constraint firstItem="NKA-bX-xWt" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="top" constant="10" id="Jq5-DN-kkg"/>
                                 <constraint firstItem="U7I-SD-jff" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="centerY" id="RkZ-ec-2tv"/>
-                                <constraint firstAttribute="height" constant="200" id="SI5-yQ-jQv"/>
                                 <constraint firstItem="KQf-a0-7eK" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="centerY" id="UkR-pP-Hqq"/>
                                 <constraint firstAttribute="centerY" secondItem="c7v-R8-f5C" secondAttribute="bottom" id="W8V-ah-Yru"/>
+                                <constraint firstAttribute="width" constant="200" id="Z2E-E1-gde"/>
                                 <constraint firstAttribute="bottom" secondItem="U7I-SD-jff" secondAttribute="bottom" constant="10" id="ZaQ-IS-cug"/>
                                 <constraint firstItem="c7v-R8-f5C" firstAttribute="top" secondItem="VtO-2r-l2A" secondAttribute="top" constant="10" id="bbt-FZ-Qdi"/>
                                 <constraint firstItem="c7v-R8-f5C" firstAttribute="leading" secondItem="VtO-2r-l2A" secondAttribute="centerX" id="blN-pk-HUt"/>
@@ -70,8 +71,8 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="VtO-2r-l2A" firstAttribute="centerX" secondItem="IuM-Xp-VM8" secondAttribute="centerX" id="Rag-UN-hdo"/>
-                        <constraint firstItem="VtO-2r-l2A" firstAttribute="centerY" secondItem="IuM-Xp-VM8" secondAttribute="centerY" id="jz9-Vg-1Fh"/>
+                        <constraint firstItem="VtO-2r-l2A" firstAttribute="centerX" secondItem="IuM-Xp-VM8" secondAttribute="centerX" id="abe-bH-K2b"/>
+                        <constraint firstItem="VtO-2r-l2A" firstAttribute="centerY" secondItem="IuM-Xp-VM8" secondAttribute="centerY" id="snV-qa-Jql"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TV7-P5-8Ax">
