--- a/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CASpringAnimation/CASpringAnimationViewController.xib
+++ b/LearnAnimation/CAAnimation/CAPropertyAnimation/CABasicAnimation/CASpringAnimation/CASpringAnimationViewController.xib
@@ -1,13 +1,23 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CASpringAnimationViewController">
             <connections>
+                <outlet property="contentView" destination="Bwl-do-owe" id="AFG-rp-95W"/>
+                <outlet property="dampingSlider" destination="DVK-S7-Wta" id="rw4-9m-b7P"/>
+                <outlet property="exampleView" destination="M9H-zN-X28" id="wWK-aK-IKl"/>
+                <outlet property="listView" destination="i14-0b-Igg" id="HQ4-ol-fNp"/>
+                <outlet property="massSlider" destination="8rX-br-Gcw" id="HJy-Rp-auF"/>
+                <outlet property="stiffnessSlider" destination="aTq-aA-N6Q" id="pSs-Qg-nsD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +25,132 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bwl-do-owe">
+                    <rect key="frame" x="0.0" y="20" width="375" height="298"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9H-zN-X28">
+                            <rect key="frame" x="127.5" y="89" width="120" height="120"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1vc-eY-hMh">
+                                    <rect key="frame" x="10" y="10" width="50" height="50"/>
+                                    <color key="backgroundColor" red="0.32653338970000001" green="0.50444246280000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kqU-AB-SdY">
+                                    <rect key="frame" x="60" y="10" width="50" height="50"/>
+                                    <color key="backgroundColor" red="1" green="0.76818942410000002" blue="0.327526975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uwH-Le-0ON">
+                                    <rect key="frame" x="10" y="60" width="50" height="50"/>
+                                    <color key="backgroundColor" red="1" green="0.5409764051" blue="0.84731429820000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tbj-DG-pCa">
+                                    <rect key="frame" x="60" y="60" width="50" height="50"/>
+                                    <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="tbj-DG-pCa" firstAttribute="leading" secondItem="M9H-zN-X28" secondAttribute="centerX" id="4Zz-3A-gKd"/>
+                                <constraint firstAttribute="trailing" secondItem="tbj-DG-pCa" secondAttribute="trailing" constant="10" id="5QD-L1-wdT"/>
+                                <constraint firstItem="tbj-DG-pCa" firstAttribute="top" secondItem="M9H-zN-X28" secondAttribute="centerY" id="Atn-WP-lRS"/>
+                                <constraint firstAttribute="centerY" secondItem="kqU-AB-SdY" secondAttribute="bottom" id="Eh1-qV-MDy"/>
+                                <constraint firstItem="kqU-AB-SdY" firstAttribute="leading" secondItem="M9H-zN-X28" secondAttribute="centerX" id="HMx-97-dW5"/>
+                                <constraint firstAttribute="width" constant="120" id="JZ2-bh-R6U"/>
+                                <constraint firstAttribute="centerY" secondItem="1vc-eY-hMh" secondAttribute="bottom" id="OHu-ei-ewY"/>
+                                <constraint firstAttribute="trailing" secondItem="kqU-AB-SdY" secondAttribute="trailing" constant="10" id="OZz-xO-T2F"/>
+                                <constraint firstAttribute="centerX" secondItem="uwH-Le-0ON" secondAttribute="trailing" id="P3l-a3-RU1"/>
+                                <constraint firstItem="uwH-Le-0ON" firstAttribute="top" secondItem="M9H-zN-X28" secondAttribute="centerY" id="RDf-a8-4GA"/>
+                                <constraint firstItem="1vc-eY-hMh" firstAttribute="leading" secondItem="M9H-zN-X28" secondAttribute="leading" constant="10" id="ReI-Ju-9Oq"/>
+                                <constraint firstItem="uwH-Le-0ON" firstAttribute="leading" secondItem="M9H-zN-X28" secondAttribute="leading" constant="10" id="bgM-wo-tNG"/>
+                                <constraint firstItem="1vc-eY-hMh" firstAttribute="top" secondItem="M9H-zN-X28" secondAttribute="top" constant="10" id="hQL-uO-hG4"/>
+                                <constraint firstAttribute="height" constant="120" id="nKu-vH-6b8"/>
+                                <constraint firstAttribute="bottom" secondItem="uwH-Le-0ON" secondAttribute="bottom" constant="10" id="vZI-E8-xpV"/>
+                                <constraint firstAttribute="bottom" secondItem="tbj-DG-pCa" secondAttribute="bottom" constant="10" id="wHU-Yq-iCz"/>
+                                <constraint firstItem="kqU-AB-SdY" firstAttribute="top" secondItem="M9H-zN-X28" secondAttribute="top" constant="10" id="woq-ni-iat"/>
+                                <constraint firstAttribute="centerX" secondItem="1vc-eY-hMh" secondAttribute="trailing" id="zOu-kZ-E9s"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="M9H-zN-X28" firstAttribute="centerX" secondItem="Bwl-do-owe" secondAttribute="centerX" id="itr-f8-3mq"/>
+                        <constraint firstItem="M9H-zN-X28" firstAttribute="centerY" secondItem="Bwl-do-owe" secondAttribute="centerY" id="rEy-2r-Nor"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jdB-fF-aTG">
+                    <rect key="frame" x="0.0" y="319" width="375" height="80"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mass" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6xR-hz-snG">
+                            <rect key="frame" x="8" y="8" width="34.5" height="16"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8rX-br-Gcw">
+                            <rect key="frame" x="48.5" y="1" width="141" height="31"/>
+                        </slider>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="stiffness" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGz-VT-upS">
+                            <rect key="frame" x="195.5" y="8" width="57" height="16"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="aTq-aA-N6Q">
+                            <rect key="frame" x="258.5" y="1" width="110.5" height="31"/>
+                        </slider>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="damping" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZF-dz-V7U">
+                            <rect key="frame" x="8" y="39" width="57" height="16"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="DVK-S7-Wta">
+                            <rect key="frame" x="71" y="32" width="118.5" height="31"/>
+                        </slider>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="6xR-hz-snG" firstAttribute="leading" secondItem="jdB-fF-aTG" secondAttribute="leading" constant="8" id="0Fs-4V-2Pd"/>
+                        <constraint firstItem="aTq-aA-N6Q" firstAttribute="centerY" secondItem="oGz-VT-upS" secondAttribute="centerY" id="3L2-0P-Zfd"/>
+                        <constraint firstItem="aZF-dz-V7U" firstAttribute="leading" secondItem="6xR-hz-snG" secondAttribute="leading" id="5rx-WY-zWn"/>
+                        <constraint firstItem="8rX-br-Gcw" firstAttribute="centerY" secondItem="6xR-hz-snG" secondAttribute="centerY" id="BM3-fh-j8l"/>
+                        <constraint firstItem="8rX-br-Gcw" firstAttribute="leading" secondItem="6xR-hz-snG" secondAttribute="trailing" constant="8" id="BoQ-Ix-HQk"/>
+                        <constraint firstItem="DVK-S7-Wta" firstAttribute="leading" secondItem="aZF-dz-V7U" secondAttribute="trailing" constant="8" id="FGe-x9-VxF"/>
+                        <constraint firstAttribute="height" constant="80" id="Fro-Ie-zzQ"/>
+                        <constraint firstItem="DVK-S7-Wta" firstAttribute="trailing" secondItem="8rX-br-Gcw" secondAttribute="trailing" id="Ita-1e-dAW"/>
+                        <constraint firstItem="oGz-VT-upS" firstAttribute="centerY" secondItem="6xR-hz-snG" secondAttribute="centerY" id="LZn-BR-x5M"/>
+                        <constraint firstAttribute="trailing" secondItem="aTq-aA-N6Q" secondAttribute="trailing" constant="8" id="b2F-eB-6o0"/>
+                        <constraint firstItem="oGz-VT-upS" firstAttribute="leading" secondItem="jdB-fF-aTG" secondAttribute="centerX" constant="8" id="hqg-tW-XJ7"/>
+                        <constraint firstItem="aZF-dz-V7U" firstAttribute="top" secondItem="8rX-br-Gcw" secondAttribute="bottom" constant="8" id="iny-Vv-Cj5"/>
+                        <constraint firstItem="DVK-S7-Wta" firstAttribute="centerY" secondItem="aZF-dz-V7U" secondAttribute="centerY" id="liZ-E7-2em"/>
+                        <constraint firstItem="aTq-aA-N6Q" firstAttribute="leading" secondItem="oGz-VT-upS" secondAttribute="trailing" constant="8" id="mFw-30-olt"/>
+                        <constraint firstItem="6xR-hz-snG" firstAttribute="top" secondItem="jdB-fF-aTG" secondAttribute="top" constant="8" id="mKW-cr-RFy"/>
+                        <constraint firstAttribute="centerX" secondItem="8rX-br-Gcw" secondAttribute="trailing" id="oPl-5d-LS5"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i14-0b-Igg">
+                    <rect key="frame" x="0.0" y="400" width="375" height="267"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="i14-0b-Igg" secondAttribute="bottom" id="8DA-e5-Sr4"/>
+                <constraint firstItem="jdB-fF-aTG" firstAttribute="leading" secondItem="Bwl-do-owe" secondAttribute="leading" id="8EB-0v-loz"/>
+                <constraint firstItem="i14-0b-Igg" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.4" id="8Fj-qQ-pey"/>
+                <constraint firstItem="i14-0b-Igg" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="LCX-43-tEh"/>
+                <constraint firstItem="i14-0b-Igg" firstAttribute="top" secondItem="jdB-fF-aTG" secondAttribute="bottom" constant="1" id="Ldb-EI-WyG"/>
+                <constraint firstItem="jdB-fF-aTG" firstAttribute="trailing" secondItem="Bwl-do-owe" secondAttribute="trailing" id="MG5-qT-Kvq"/>
+                <constraint firstItem="Bwl-do-owe" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="UCF-O2-gff"/>
+                <constraint firstItem="jdB-fF-aTG" firstAttribute="top" secondItem="Bwl-do-owe" secondAttribute="bottom" constant="1" id="Wpx-wq-n5m"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="i14-0b-Igg" secondAttribute="trailing" id="YnX-4B-pJ6"/>
+                <constraint firstItem="Bwl-do-owe" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="nma-tq-Nb9"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Bwl-do-owe" secondAttribute="trailing" id="x1X-j6-DDq"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="132" y="149.77511244377811"/>
         </view>
     </objects>
 </document>
